# AndroidFFmpeg

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chexiaoya/ffmpegdemo/: MainActivity.java  SendSmallVideoActivity.java  VideoPlayerActivity.java
app/src/main/java/com/xiaoxie/ffmpeg/: CameraActivity.java  CameraFragment.java  MainActivity.java  SendSmallVideoActivity.java  VideoPlayActivity.java  VideoPlayerActivity.java
app/src/main/java/com/xiaoxie/ffmpeg/application/: MyApplication.java
app/src/main/res/drawable/: shape_ed_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_videoplay.xml  fragment_camera.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cameralibrary/src/androidTest/java/com/xcb/cameralibrary/: ExampleInstrumentedTest.java
cameralibrary/src/main/: AndroidManifest.xml
cameralibrary/src/main/java/com/xcb/cameralibrary/base/: AspectRatio.java  CameraViewImpl.java  Constants.java  OrientationDetector.java  PreviewImpl.java  Size.java  SizeMap.java
cameralibrary/src/main/java/com/xcb/cameralibrary/camera/api14/: Camera1.java  SurfaceViewPreview.java  TextureViewPreview.java
cameralibrary/src/main/java/com/xcb/cameralibrary/camera/api21/: Camera2.java
cameralibrary/src/main/java/com/xcb/cameralibrary/camera/api23/: Camera2Api23.java
cameralibrary/src/main/java/com/xcb/cameralibrary/view/: CameraView.java
cameralibrary/src/main/res/values/: attrs.xml  styles.xml
cameralibrary/src/test/java/com/xcb/cameralibrary/: ExampleUnitTest.java
ffmpeg-4.1.3/: ffprobe  ffprobe_g
ffmpeg-4.1.3/doc/: config.texi
ffmpeg-4.1.3/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-4.1.3/libavcodec/: codec_list.c  libavcodec.pc  libx264.d
ffmpeg-4.1.3/libavdevice/: libavdevice.pc
ffmpeg-4.1.3/libavfilter/: libavfilter.pc
ffmpeg-4.1.3/libavformat/: libavformat.pc
ffmpeg-4.1.3/libavutil/: libavutil.pc  libavutil.so.56
ffmpeg-4.1.3/libpostproc/: libpostproc.pc
ffmpeg-4.1.3/libswresample/: libswresample.pc
ffmpeg-4.1.3/libswscale/: libswscale.pc  libswscale.so.5
ffmpegLib/: build.gradle
ffmpegLib/src/main/java/com/mabeijianxi/smallvideorecord2/: UVCMediaRecorderActivity.java
ffmpegLib/src/main/java/com/mabeijianxi/smallvideorecord2/jniinterface/: FFmpegBridge.java
ffmpegLib/src/main/java/com/mabeijianxi/smallvideorecord2/model/: MediaRecorderConfig.java
ffmpegLib/src/main/res/layout/: activity_uvc_media_recorder.xml
gradle/wrapper/: gradle-wrapper.properties
libffmpeg/: CMakeLists.txt  build.gradle  commands  configure_explain
libffmpeg/src/main/: AndroidManifest.xml
libffmpeg/src/main/cpp/: android_log.h  xx_ffmpeg.c  xx_ffmpeg.h  xx_ffmpeg_play_audio.c  xx_ffmpeg_play_video.c
libffmpeg/src/main/cpp/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
libffmpeg/src/main/java/com/mabeijianxi/smallvideorecord2/: Log.java  MediaRecorderActivity.java  MediaRecorderBase.java  MediaRecorderNative.java  UVCMediaRecorderNative.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/: CmdList.java  FFmpegJniBridge.java  OnCmdExecListner.java  VideoCompressConfig.java  VideoCutEditor.java  VideoHandleEditor.java  VideoMergeConfig.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/config/: AddTextWatermarkConfig.java  AutoVBRMode.java  BGMConfig.java  BaseConfig.java  CBRMode.java  ChangePTSConfig.java  Image2VideoConfig.java  ReverseConfig.java  VBRMode.java  Video2ImageConfig.java  VideoCompressConfig.java  VideoMergeByTranscodeConfig.java  VideoMergeConfig.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/config/waterMark/: AddImageWaterMakerConfig.java  AddTextWatermarkConfig.java  Locations.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/interfaces/: OnCmdExecListener.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/mode/: AutoVBRMode.java  CBRMode.java  Format.java  Mode.java  PTS.java  Preset.java  Size.java  Tune.java  VBRMode.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/utils/: VideoUtils.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/videoplay/: FFmpegVideoView.java  IRenderView.java  MeasureHelper.java  MusicPlayWithAudioTrack.java
libffmpeg/src/main/java/com/xiaoxie/ffmpeglib/view/: CameraView.java
libffmpeg/src/main/res/layout/: activity_media_recorder.xml
uvccamera/: .gitignore  build.gradle
uvccamera/src/main/: AndroidManifest.xml
uvccamera/src/main/java/com/serenegiant/usb/: BuildCheck.java  CameraDialog.java  HandlerThreadHandler.java  USBMonitor.java  UVCCamera.java
uvccamera/src/main/java/com/serenegiant/usb/encoder/: MediaMuxerWrapper.java  MediaVideoBufferEncoder.java
uvccamera/src/main/java/com/serenegiant/usb/usbcameracommon/: AbstractUVCCameraHandler.java  UVCCameraHandler.java  UVCCameraHandlerMultiSurface.java
uvccamera/src/main/java/com/serenegiant/usb/widget/: CameraViewInterface.java  UVCCameraTextureView.java
